# chataigne

./: .pre-commit-config.yaml  pyproject.toml
chataigne/: horizontal_layout.py  llms.py  messages.py  styles.css  tool.py  web_base.py
chataigne/tools/: amazing_marvin.py
demos/: simple.py
tests/: test_merge.py  test_serialisation.py  test_to_anthropic.py  test_to_openai.py  test_tools.py
