[project]
name = "chataigne"
version = "0.1.0"
description = "A powerful chat interface with tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.54.3",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "streamlit-pills>=0.3.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
include = ["chataigne", "demos", "tests"]
# strict = ["chataigne", "demos", "tests"]
